@@ -1,3 +1,6 @@
+  22 May 2014
+img^jpg:(img^jpg)^?n failed, while img+jpg:(img+jpg)^?n succeded. Now they both succeed.
+
   16 May 2014
 1\La+1\Lb crashed due to stack overflow. Test ~1 in f5 solves the problem.
 
